# etl-cobb-douglas-model

./: .gitignore  README.md  main.py  pyproject.toml
core/: config.py  data.py
data/: sources.yml
data/processed/: data.duckdb
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: cobb_douglas_estimates.sql  cobb_douglas_series.sql
dbt/models/original_data_flow/: sources.yml
dbt/models/staging/: stg_douglas.sql  stg_usa_cobb_douglas.sql  stg_uscb.sql
ingest/: main.py
viz/: constants.py  model.py  plot.py  run_all.py  validation.py
